--- a/myProfile.css
+++ b/myProfile.css
@@ -10,7 +10,7 @@ body {
   color: ghostwhite;
   background-color: #000000;
   font-size: 18px;
-  background: url(https://lh3.googleusercontent.com/proxy/GpF-NAVcmjN43IHhbmBJzxZcm8x_Nkh3I43UYRE_QD6U69_8BLF2PUfodaEI_cCUJAT4aoCn_K9D8DrL_NHG6Lz_4u0a2WL5tt4TYI3wQim_5CnqilSL-Falp6L6yD2Pl1jbzaJgKFWwx_P3D52iI5Jpwzma2f7XcBA);
+  background: url(https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.amazon.com%2FAIIKES-Photography-Backdrop-Background-Decoration%2Fdp%2FB07QK7MB8Y&psig=AOvVaw2_BmX0Phs2MO0GZ6forhUH&ust=1593861501005000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCNCerPj6sOoCFQAAAAAdAAAAABAP);
 }
 
 .logoText {
