--- a/myProfile.css
+++ b/myProfile.css
@@ -10,7 +10,7 @@ body {
   color: ghostwhite;
   background-color: #000000;
   font-size: 18px;
-  background: url(https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.amazon.com%2FAIIKES-Photography-Backdrop-Background-Decoration%2Fdp%2FB07QK7MB8Y&psig=AOvVaw2_BmX0Phs2MO0GZ6forhUH&ust=1593861501005000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCNCerPj6sOoCFQAAAAAdAAAAABAP);
+  background: url("112.jpg");
 }
 
 .logoText {
